Changes with APR 0.9.4

  *) When writing to pipes with a timeout set, handle the situation
     where the kernel says the pipe is writable but an attempt to
     write <= PIPE_BUF bytes gets EAGAIN.  APR will now write whatever
     data will fit.  APR applications that relied on the atomic nature
     of relatively small pipe write requests may be affected.
     PR 20295  [Mark Street <mark@faime.demon.co.uk>, Jeff Trawick]

  *) Define _THREAD_SAFE for all compilations on AIX.  Previously
     those of us who used the vendor compiler had it defined
     implicitly and others did not.  The difference became obvious
     with the recent thread safety fixes to apr_password_validate().
     PR 20420  [Jeff Trawick]

  *) For apr_proc_detach(APR_PROC_DETACH_FOREGROUND), don't treat
     a setsid() failure as fatal, as the usual cause is that the
     caller is already a process group leader.  PR 18519
     [Jeff Trawick]

  *) Fix some problems with non-blocking socket handling on unix
     that resulted in infinite timeouts being used for non-blocking
     sockets with apr_socket_connect() and some read/write calls.
     [Jeff Trawick]

  *) Fix a bug in socket timeout handling on unix that left the
     socket non-blocking after disabling the timeout.
     [Jacob Craig Lewallen <jlewalle@cs.ucr.edu>]

  *) Added flag APR_FILE_ATTR_HIDDEN for manipulating the "hidden"
     file attribute on Windows and OS/2.  [Branko Cibej]

  *) SECURITY [CAN-2003-0245]: Fixed a bug that could be triggered
     remotely through mod_dav and possibly other mechanisms, causing
     an Apache child process to crash.  The crash was first reported
     by David Endler <DEndler@iDefense.com> and was researched and
     fixed by Joe Orton <jorton@redhat.com>.  Details will be released
     on 30 May 2003.

  *) apr_proc_wait(): Handle interrupted waitpid(2) calls by calling
     it repeatedly until it succeeds or fails with errno other than